log/build_2023-08-10_12-01-02/my_station_pkg/stderr.log
  File "/home/spiderweb/TestBase/install/my_station_pkg/lib/python3.10/site-packages/my_station_pkg/telemetrypoll_node.py", line 107
    break
    ^^^^^
SyntaxError: 'break' outside loop

